--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,12 @@
                 </a>
             </div>
             <div class ="table-line">
+                <a href="https://saint.ssu.ac.kr/irj/portal" target="_blank">
+                <img src="../icons/icon_usaint.png">
+                <p>유세인트</p>
+                </a>
+            </div>
+            <div class ="table-line">
                 <a href="https://fun.ssu.ac.kr/" target="_blank">
                 <img src="../icons/icon_fun.png">
                 <p>펀시스템</p>
@@ -36,7 +42,7 @@
                 </a>
             </div>
             <div class ="table-line">
-                <a href="https://everytime.kr/" target="_blank">
+                <a href="https://saint.ssu.ac.kr/irj/portal" target="_blank">
                 <img src="../icons/icon_every.png" id="everytime">
                 <p>에브리타임</p>
                 </a>
