--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
                 </a>
             </div>
             <div class ="table-line">
-                <a href="https://saint.ssu.ac.kr/irj/portal" target="_blank">
+                <a href="https://everytime.kr/" target="_blank">
                 <img src="../icons/icon_every.png" id="everytime">
                 <p>에브리타임</p>
                 </a>
