--- a/html/index.html
+++ b/html/index.html
@@ -24,9 +24,9 @@
                 </a>
             </div>
             <div class ="table-line">
-                <a href="https://myclass.ssu.ac.kr/" target="_blank">
+                <a href="https://class.ssu.ac.kr/" target="_blank">
                 <img src="../icons/icon_smart.png">
-                <p>스마트 캠퍼스</p>
+                <p>스마트캠퍼스</p>
                 </a>
             </div>
             <div class ="table-line">
